More work on CI/CD
- Trying to get linter to work
- Getting Travis stages/jobs working

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ node_js:
 
 cache: yarn
 
-lint: 
-  script:
-    - yarn run eslint ./
+stages:
+  - lint
+
+jobs:
+  include:
+    - stage: "lint"
+      name: "Check Lint"
+      script:
+        - yarn run eslint ./
