--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-transition-group": "1.x"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -23,10 +24,10 @@
   "scripts": {
     "build:css": "postcss src/styles/index.css -o src/tailwind.css",
     "watch:css": "postcss src/styles/index.css -o src/tailwind.css -w",
-    "start": "yarn run watch:css & cross-env BROWSER=none react-scripts start",
-    "build": "yarn run build:css && react-scripts build",
-    "test": "react-scripts test --verbose=false",
-    "eject": "react-scripts eject"
+    "start": "yarn run watch:css & cross-env BROWSER=none react-app-rewired start",
+    "build": "yarn run build:css && react-app-rewired build",
+    "test": "react-app-rewired test --verbose=false",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,9 +40,13 @@
   ],
   "devDependencies": {
     "autoprefixer": "^9.5.1",
+    "babel-plugin-root-import": "^6.1.0",
+    "cross-env": "^5.2.0",
+    "customize-cra": "^0.2.12",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "postcss-cli": "^6.1.2",
+    "react-app-rewired": "^2.1.1",
     "tailwindcss": "^0.7.4"
   },
   "husky": {
