Revert manifest json to not include app

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,12 +15,5 @@
   ],
   "theme_color": "#7553bb",
   "background_color": "#ffffff",
-  "display": "standalone",
-  "prefer_related_applications": true,
-  "related_applications": [
-    {
-      "platform": "play",
-      "id": "com.google.samples.apps.iosched"
-    }
-  ]
+  "display": "standalone"
 }
