Add starturl to manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,7 @@
     }
   ],
   "theme_color": "#7553bb",
+  "start_url": "/?homescreen=1",
   "background_color": "#ffffff",
   "display": "standalone"
 }
