Add posts with types
- Adding posts with type support allows us to add quotes and other types
  of posts in the future.
- Right now quotes are not limited in text size but should be in the
  future
- Adds more complexity to the feed
- Abstracts the post html out of the image component
- Adds tabs to the upload page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#7553bb",
+  "theme_color": "#5d3e9d",
   "start_url": "/?homescreen=1",
   "background_color": "#ffffff",
   "display": "standalone"
