--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-transition-group": "^4.0.0",
+    "redux": "^4.0.1",
+    "redux-react-hook": "^3.3.2",
     "tinycolor2": "^1.4.1",
     "uuid": "^3.3.2"
   },
