--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "2.1.8",
     "react-transition-group": "^4.0.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-react-hook": "^3.3.2",
     "tinycolor2": "^1.4.1",
     "uuid": "^3.3.2"
