--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "exif-js": "^2.3.0",
     "husky": "^2.2.0",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
@@ -36,9 +35,6 @@
     "test": "react-app-rewired test --verbose=false",
     "eject": "react-app-rewired eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -52,7 +48,10 @@
     "customize-cra": "^0.2.12",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "postcss-cli": "^6.1.2",
+    "prettier": "^1.18.2",
     "react-app-rewired": "^2.1.1",
     "tailwindcss": "^0.7.4"
   },
