--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --single-quote --write",
+      "eslint ./ --fix",
       "git add"
     ]
   },
@@ -33,7 +33,8 @@
     "start": "yarn run watch:css & cross-env BROWSER=none react-app-rewired start",
     "build": "yarn run build:css && react-app-rewired build",
     "test": "react-app-rewired test --verbose=false",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "lint": "eslint ./ --fix"
   },
   "browserslist": [
     ">0.2%",
