--- a/package.json
+++ b/package.json
@@ -1,68 +1,33 @@
 {
   "name": "wiggles",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.4",
+  "version": "1.0.0",
+  "main": "dist/main/index.js",
+  "browserModern": "dist/modern/index.js",
+  "repository": "git@github.com:johnny88/wiggles.git",
+  "author": "John Pangalos <jpangs88@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.tsx"
+  },
+  "targets": {
+    "browserModern": {
+      "engines": {
+        "browsers": [
+          "> 1%",
+          "not dead"
+        ]
+      }
+    }
+  },
+  "devDependencies": {
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
-    "exif-js": "^2.3.0",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.3.0",
-    "react-transition-group": "^4.0.0",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-react-hook": "^3.3.2",
-    "tinycolor2": "^1.4.1",
-    "typescript": "^3.7.4",
-    "uuid": "^3.3.2"
+    "parcel": "^2.0.0-alpha.3.2", 
+    "@parcel/core": "^2.0.0-alpha.3.2"
   },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "scripts": {
-    "build:css": "postcss src/styles/index.css -o src/tailwind.css",
-    "watch:css": "postcss src/styles/index.css -o src/tailwind.css -w",
-    "start": "yarn run watch:css & react-scripts start",
-    "build": "yarn run build:css && react-scripts build",
-    "test": "react-scripts test --verbose=false",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./ --fix"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "autoprefixer": "^9.5.1",
-    "babel-plugin-root-import": "^6.1.0",
-    "cross-env": "^5.2.0",
-    "customize-cra": "^0.2.12",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "postcss-cli": "^6.1.2",
-    "prettier": "^1.18.2",
-    "tailwindcss": "^0.7.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
