--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "esModuleInterop": true,
     "jsx": "react",
-    "lib": ["dom", "esnext"],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "outDir": "dist",
-    "sourceMap": true,
-    "strict": true,
-    "target": "esnext",
-    "paths": {
-      "/web_modules/*.js": [
-        "node_modules/@types/*",
-        "node_modules/*",
-        "public/web_modules/*"
-      ]
-    }
+    "baseUrl": "./src",
+    "esModuleInterop": true,
+    "typeRoots": ["node_modules/@types"]
   },
-  "exclude": ["node_modules", "web_modules"]
+  "include": ["src/**/*"]
 }
