--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "parcel build public/index.html"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.0.5",
     "@parcel/core": "^2.0.0-alpha.3.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "autoprefixer": "^9.7.4",
     "postcss-import": "^12.0.1",
+    "postcss-modules": "^1.5.0",
     "tailwindcss": "^1.1.4",
     "typescript": "^3.7.5"
   },
