--- a/package.json
+++ b/package.json
@@ -5,24 +5,62 @@
   "author": "John Pangalos <jpangs88@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel public/index.html",
-    "build": "parcel build public/index.html"
+    "start": "rm -rf ./dist && clear && parcel public/index.html --no-autoinstall",
+    "build": "rm -rf ./dist && parcel build public/index.html"
+  },
+  "module": "dist/module/index.js",
+  "browser": "dist/browser/index.js",
+  "browserslist": [
+    "> 1%",
+    "not dead"
+  ],
+  "engines": {
+    "node": ">=4.x"
+  },
+  "source": "src/index.ts",
+  "targets": {
+    "browser": {
+      "browsers": [
+        "> 1%",
+        "not dead"
+      ]
+    }
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.0.5",
     "@parcel/core": "^2.0.0-alpha.3.2",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
     "autoprefixer": "^9.7.4",
+    "babel-eslint": "10.x",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "1.x",
+    "parcel": "^2.0.0-alpha.3.2",
     "postcss-import": "^12.0.1",
     "postcss-modules": "^1.5.0",
+    "prettier": "^1.19.1",
     "tailwindcss": "^1.1.4",
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.2.3",
     "classnames": "^2.2.6",
-    "parcel": "^1.12.4",
+    "firebase": "^7.7.0",
+    "normalizr": "^3.5.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-feather": "^2.0.3",
+    "react-firebase-hooks": "^2.1.1",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux-thunk": "^2.3.0"
   }
 }
