--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "John Pangalos <jpangs88@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "rm -rf ./dist && clear && parcel public/index.html --no-autoinstall",
-    "build": "rm -rf ./dist && parcel build public/index.html"
+    "start": "rm -rf ./dist && clear && parcel src/index.html --no-autoinstall",
+    "build": "rm -rf ./dist && parcel build src/index.html"
   },
   "module": "dist/module/index.js",
   "browser": "dist/browser/index.js",
@@ -27,7 +27,6 @@
     }
   },
   "devDependencies": {
-    "@parcel/core": "^2.0.0-alpha.3.2",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "2.x",
@@ -43,7 +42,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "1.x",
-    "parcel": "^2.0.0-alpha.3.2",
+    "parcel": "^1.12.4",
     "postcss-modules": "^1.5.0",
     "prettier": "^1.19.1",
     "tailwindcss": "^1.1.4",
