--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@sentry/browser": "^5.11.1",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "exif-js": "^2.3.0",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.4.1",
     "react-transition-group": "^4.0.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
@@ -22,6 +26,7 @@
     "redux-logger": "^3.0.6",
     "redux-react-hook": "^3.3.2",
     "tinycolor2": "^1.4.1",
+    "typescript": "^3.8.3",
     "uuid": "^3.3.2"
   },
   "lint-staged": {
