--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "uuid": "^3.3.2"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "src/**/*.{js,jsx,ts,tsx,json}": [
       "eslint ./ --fix",
       "git add"
     ]
@@ -62,7 +62,7 @@
     "postcss-cli": "^6.1.2",
     "prettier": "^1.18.2",
     "react-app-rewired": "^2.1.1",
-    "tailwindcss": "^0.7.4"
+    "tailwindcss": "^1.2.0"
   },
   "husky": {
     "hooks": {
