--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
   "scripts": {
     "build:css": "postcss src/styles/index.css -o src/tailwind.css",
     "watch:css": "postcss src/styles/index.css -o src/tailwind.css -w",
-    "start": "yarn run build:css && cross-env BROWSER=none react-app-rewired start",
-    "build": "yarn run build:css && react-app-rewired build",
-    "test": "react-app-rewired test --verbose=false",
-    "eject": "react-app-rewired eject",
+    "start": "yarn run build:css && cross-env BROWSER=none react-scripts start",
+    "build": "yarn run build:css && react-scripts build",
+    "test": "react-scripts test --verbose=false",
+    "eject": "react-scripts eject",
     "lint": "eslint ./ --fix"
   },
   "browserslist": [
@@ -61,7 +61,6 @@
     "eslint-plugin-prettier": "^3.1.0",
     "postcss-cli": "^6.1.2",
     "prettier": "^1.18.2",
-    "react-app-rewired": "^2.1.1",
     "tailwindcss": "^1.2.0"
   },
   "husky": {
