--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "@sentry/browser": "^5.11.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
@@ -17,6 +13,7 @@
     "lint-staged": "^9.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-feather": "^2.0.9",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.0.0",
