--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-regex": "^7.10.5",
     "@sentry/browser": "^5.11.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
