--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build:css": "postcss src/styles/index.css -o src/tailwind.css",
     "watch:css": "postcss src/styles/index.css -o src/tailwind.css -w",
     "start": "yarn run build:css && cross-env BROWSER=none react-scripts start",
-    "build": "yarn run build:css && react-scripts build",
+    "build": "NODE_ENV=production yarn run build:css && react-scripts build",
     "test": "react-scripts test --verbose=false",
     "eject": "react-scripts eject",
     "lint": "eslint ./ --fix"
@@ -48,14 +48,15 @@
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "autoprefixer": "^9.5.1",
+    "autoprefixer": "^10.2.0",
     "cross-env": "^5.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "postcss-cli": "^6.1.2",
+    "postcss": "^8.2.2",
+    "postcss-cli": "^8.3.1",
     "prettier": "^1.18.2",
     "react-hot-loader": "^4.13.0",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^2.0.2"
   },
   "husky": {
     "hooks": {
