--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.2.0",
     "cross-env": "^5.2.0",
     "enzyme": "^3.9.0",
