--- a/functions/package.json
+++ b/functions/package.json
@@ -1,27 +1,36 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase serve --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
+    "lint": "eslint --ext .js,.ts .",
+    "clean": "rimraf lib",
+    "build": "tsc --incremental",
+    "serve": "pnpm run build && firebase emulators:start",
+    "shell": "pnpm run build && firebase functions:shell",
+    "start": "pnpm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "main": "lib/index.js",
   "dependencies": {
-    "@google-cloud/storage": "^3.0.3",
+    "@google-cloud/storage": "^3.5.0",
     "child-process-promise": "^2.2.1",
-    "firebase-admin": "~8.3.0",
-    "firebase-functions": "^3.2.0",
-    "mkdirp": "^0.5.1",
-    "mkdirp-promise": "^5.0.1",
-    "uuid": "^3.3.2"
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
+    "mkdirp": "^1.0.4",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "firebase-functions-test": "^0.1.6"
+    "@types/child-process-promise": "^2.2.1",
+    "@types/mkdirp": "^1.0.1",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.22.0",
+    "firebase-functions-test": "^0.2.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.2.3"
   },
   "engines": {
     "node": "14"
