--- a/web/package.json
+++ b/web/package.json
@@ -9,15 +9,16 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "next",
     "autoprefixer": "^10.2.5",
-    "svelte": "^3.35.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
+    "svelte": "^3.37.0",
     "svelte-preprocess": "^4.6.9",
-    "typescript": "^4.2.3",
-    "vite": "^2.1.3"
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.2.4",
+    "vite": "^2.1.5"
   },
   "dependencies": {
-    "@tailwindcss/jit": "^0.1.17",
-    "firebase": "^0.900.23",
-    "svelte-feather-icons": "^3.3.0",
-    "tailwindcss": "^2.0.4"
+    "clsx": "^1.1.1",
+    "firebase": "^0.900.23"
   }
 }
