Move to api from firebase calls from browser

--- a/functions/package.json
+++ b/functions/package.json
@@ -4,16 +4,20 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "clean": "rimraf lib",
-    "build": "tsc --incremental",
-    "serve": "pnpm run build && firebase emulators:start",
-    "shell": "pnpm run build && firebase functions:shell",
-    "start": "pnpm run shell",
+    "build": "tsc -p ./tsconfig.json --incremental",
+    "watch": "tsc -p ./tsconfig.json --watch --preserveWatchOutput",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "main": "lib/index.js",
   "dependencies": {
     "child-process-promise": "^2.2.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "mkdirp": "^1.0.4",
@@ -21,6 +25,9 @@
   },
   "devDependencies": {
     "@types/child-process-promise": "^2.2.1",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.3",
+    "@types/express-serve-static-core": "^4.17.0",
     "@types/mkdirp": "^1.0.1",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
