--- a/web/package.json
+++ b/web/package.json
@@ -7,17 +7,18 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "next",
-    "autoprefixer": "^10.2.5",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.37.0",
-    "svelte-preprocess": "^4.6.9",
-    "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4",
-    "vite": "^2.1.5"
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "autoprefixer": "^10.4.0",
+    "prettier": "^2.4.1",
+    "prettier-plugin-svelte": "^2.4.0",
+    "svelte": "^3.44.1",
+    "svelte-preprocess": "^4.9.8",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.4.4",
+    "vite": "^2.6.13"
   },
   "dependencies": {
+    "@sveltestack/svelte-query": "^1.4.1",
     "clsx": "^1.1.1",
     "firebase": "^0.900.23"
   }
