--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "exif-js": "^2.3.0",
+    "firebase": "^9.9.2",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
     "lozad": "^1.16.0",
