--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^6.x",
     "react-transition-group": "^4.0.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
