--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
-  "name": "wiggles",
+  "name": "wiggles-pages",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "exif-js": "^2.3.0",
+    "@tanstack/react-query": "^4.2.1",
+    "@tanstack/react-query-devtools": "^4.2.1",
+    "@tanstack/react-virtual": "3.0.0-beta.18",
     "firebase": "^9.9.2",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.2.0",
-    "lozad": "^1.16.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "firebase-admin": "^11.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-feather": "^2.0.9",
     "react-router-dom": "^6.x",
     "react-transition-group": "^4.0.0",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-react-hook": "^3.3.2",
-    "tinycolor2": "^1.4.1",
-    "typescript": "^4.7.4",
-    "uuid": "^3.3.2",
-    "vite": "^3.0.7"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json}": [
-      "eslint ./ --fix",
-      "git add"
-    ]
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "lint": "eslint ./ --fix"
+    "lint": "eslint ./src --fix"
   },
   "browserslist": [
     ">0.2%",
@@ -41,42 +27,37 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/lozad": "^1.16.1",
+    "@firebase/app-types": "^0.7.0",
     "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-transition-group": "^4.4.5",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/react-window": "^1.8.5",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
-    "autoprefixer": "^10.2.0",
-    "babel-eslint": "^10.0.0",
+    "autoprefixer": "^10.4.8",
     "cross-env": "^5.2.0",
-    "eslint": "^7.5.0",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint": "^8.23.0",
+    "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "postcss": "^8.2.2",
-    "postcss-cli": "^8.3.1",
+    "husky": "^3.0.0",
+    "lint-staged": "^9.2.0",
+    "postcss": "^8.4.16",
     "prettier": "^1.18.2",
-    "react-hot-loader": "^4.13.0",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.7"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json}": [
+      "pnpm lint",
+      "git add"
     ]
   }
 }
