--- a/package.json
+++ b/package.json
@@ -2,52 +2,13 @@
   "name": "wiggles-pages",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@tanstack/react-query": "^4.2.1",
-    "@tanstack/react-query-devtools": "^4.2.1",
-    "@tanstack/react-virtual": "3.0.0-beta.18",
-    "firebase": "^9.9.2",
-    "firebase-admin": "^11.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-feather": "^2.0.9",
-    "react-router-dom": "^6.x",
-    "react-transition-group": "^4.0.0",
-    "uuid": "^8.3.2"
-  },
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "lint": "eslint ./src --fix"
+    "dev": "pnpm run -r dev",
+    "lint": "pnpm run -r lint"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "@firebase/app-types": "^0.7.0",
-    "@types/node": "^13.11.1",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-transition-group": "^4.4.5",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "@vitejs/plugin-react": "^2.0.1",
-    "autoprefixer": "^10.4.8",
-    "cross-env": "^5.2.0",
-    "eslint": "^8.23.0",
-    "eslint-plugin-react": "^7.31.1",
-    "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^3.0.0",
-    "lint-staged": "^9.2.0",
-    "postcss": "^8.4.16",
-    "prettier": "^1.18.2",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.7"
+    "lint-staged": "^9.2.0"
   },
   "husky": {
     "hooks": {
