--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
     "react-feather": "^2.0.9",
     "react-router-dom": "^6.4.0",
     "react-transition-group": "^4.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "dev": "vite dev",
@@ -32,6 +33,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-transition-group": "^4.4.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "@vitejs/plugin-react": "^2.1.0",
