--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
         uses: ./.github/actions/install-deps
 
       - name: Build
-        run: pnpm build
+        run: cd web && pnpm build
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@1
@@ -25,6 +25,6 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: e5933c765c57d2f3a58d86973c88362c
           projectName: wiggles
-          directory: dist
+          directory: web/dist
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
 
