--- a/web/package.json
+++ b/web/package.json
@@ -48,7 +48,8 @@
     "prettier": "^1.18.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
-    "vite": "^3.1.1"
+    "vite": "^3.1.1",
+    "vite-plugin-pwa": "^0.13.1"
   },
   "husky": {
     "hooks": {
