--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,5 +1,9 @@
-name: Publish
-on: [push]
+name: Deploy Web
+on: 
+  push:
+    - main
+  paths:
+    - 'web/**'
 
 jobs:
   publish:
@@ -19,7 +23,7 @@ jobs:
       - name: Build
         run: cd web && pnpm build
 
-      - name: Publish to Cloudflare Pages
+      - name: Publish
         uses: cloudflare/pages-action@1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -27,4 +31,5 @@ jobs:
           projectName: wiggles
           directory: web/dist
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
 
