--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.4.0",
     "react-transition-group": "^4.0.0",
     "uuid": "^8.3.2",
+    "workbox-window": "^6.5.4",
     "zustand": "^4.1.1"
   },
   "scripts": {
