--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -17,8 +17,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vite-plugin-pwa/client"]
   },
-  "include": ["src"],
-  "exclude": ["functions/**/*"]
+  "include": ["src", "./vite.config.ts", "manifest.json"]
 }
