--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^6.4.0",
     "react-transition-group": "^4.0.0",
     "uuid": "^8.3.2",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
     "workbox-window": "^6.5.4",
     "zustand": "^4.1.1"
   },
@@ -31,6 +33,7 @@
   ],
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/node": "^13.13.52",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
@@ -49,6 +52,7 @@
     "lint-staged": "^9.2.0",
     "postcss": "^8.4.16",
     "prettier": "^1.18.2",
+    "rollup": "^2.79.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
     "vite": "^3.1.1",
