--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.4.0",
     "react-transition-group": "^4.0.0",
     "uuid": "^8.3.2",
+    "workbox-core": "^6.5.4",
     "workbox-precaching": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-window": "^6.5.4",
