--- a/web/package.json
+++ b/web/package.json
@@ -14,10 +14,6 @@
     "react-router-dom": "^6.4.0",
     "react-transition-group": "^4.0.0",
     "uuid": "^8.3.2",
-    "workbox-core": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-window": "^6.5.4",
     "zustand": "^4.1.1"
   },
   "scripts": {
@@ -56,8 +52,7 @@
     "rollup": "^2.79.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
-    "vite": "^3.1.1",
-    "vite-plugin-pwa": "^0.13.1"
+    "vite": "^3.1.1"
   },
   "husky": {
     "hooks": {
