--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "lint": "pnpm run -r lint"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^3.0.0",
-    "lint-staged": "^9.2.0"
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.18.2",
+    "typescript": "^4.8.3"
   },
   "husky": {
     "hooks": {
