more sentry fixes

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -46,3 +46,4 @@ jobs:
           environment: production
           sourcemaps: ./web/dist
           ignore_missing: true
+          ignore_empty: true
