--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -23,7 +23,9 @@ jobs:
         uses: ./.github/actions/install-deps
 
       - name: Build
-        run: cd web && VITE_RELEASE=${ GITHUB_SHA } pnpm build
+        run: cd web &&  pnpm build
+        env:
+          VITE_RELEASE=${ GITHUB_SHA }
 
       - name: Publish
         uses: cloudflare/pages-action@1
