--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         run: cd web &&  pnpm build
         env:
-          VITE_RELEASE=${ GITHUB_SHA }
+          VITE_RELEASE: ${ GITHUB_SHA }
 
       - name: Publish
         uses: cloudflare/pages-action@1
