--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -5,6 +5,7 @@ on:
       - main
     paths:
       - 'web/**'
+      - '.github/workflows/deploy-web.yml'
   workflow_dispatch:
 
 jobs:
@@ -25,7 +26,7 @@ jobs:
       - name: Build
         run: cd web &&  pnpm build
         env:
-          VITE_RELEASE: ${{ GITHUB_SHA }}
+          VITE_RELEASE: ${{ env.GITHUB_SHA }}
 
       - name: Publish
         uses: cloudflare/pages-action@1
