--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "wrangler dev --config wrangler-dev.toml"
+    "dev": "wrangler dev --config wrangler-dev.toml",
+    "type-check": "tsc"
   },
   "keywords": [],
   "author": "",
