--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,8 @@
     "dev": "vite dev",
     "build": "vite build --mode production",
     "preview": "rm -rf dist && pnpm build --mode staging && pnpm vite preview --port 5173",
-    "lint": "eslint ./src --fix"
+    "lint": "eslint ./src --fix",
+    "type-check": "tsc"
   },
   "browserslist": [
     ">0.2%",
