revert working dir fix

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -26,7 +26,8 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          command: cd api && publish --var RELEASE:$GITHUB_SHA --outdir dist
+          workingDirectory: api
+          command: publish --var RELEASE:$GITHUB_SHA --outdir dist
 
       - name: Create Sentry release
         uses: getsentry/action-release@v1
