more attemps at fixing deps issue

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -14,6 +14,10 @@ jobs:
       contents: read
       deployments: write
 
+    defaults:
+      run:
+        working-directory: ./
+
     name: Cloudflare Workers
     steps:
       - name: Checkout
@@ -26,7 +30,7 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          workingDirectory: api
+          workingDirectory: ./api
           command: publish --var RELEASE:$GITHUB_SHA --outdir dist
 
       - name: Create Sentry release
