--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -28,6 +28,10 @@ jobs:
           workingDirectory: ./api
           command: publish --var RELEASE:$GITHUB_SHA --outdir dist
 
+      - name: Fix working dir
+        run: ls -la
+        working-directory: ./
+
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
@@ -39,3 +43,4 @@ jobs:
           sourcemaps: ./api/dist
           ignore_missing: true
           ignore_empty: true
+
