--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -1,6 +1,7 @@
 name = "wiggles-api"
 main = "src/index.ts"
 compatibility_date = "2022-09-11"
+account_id = "e5933c765c57d2f3a58d86973c88362c"
 
 route = { pattern = "wiggle-room.xyz/api/*", zone_name = "wiggle-room.xyz" }
 
