--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "wrangler dev --config wrangler-dev.toml",
+    "dev": "wrangler dev --config wrangler-dev.toml --remote",
     "type-check": "tsc"
   },
   "keywords": [],
@@ -12,13 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.19.0",
-    "@types/uuid": "^8.3.4",
-    "wrangler": "^2.19.0"
+    "@types/uuid": "^9.0.2",
+    "wrangler": "^3.4.0"
   },
   "dependencies": {
     "@ssttevee/multipart-parser": "^0.1.9",
-    "hono": "^2.7.8",
-    "toucan-js": "^2.7.0",
-    "uuid": "^8.3.2"
+    "hono": "^3.3.4",
+    "toucan-js": "^3.2.1",
+    "uuid": "^9.0.0"
   }
 }
