--- a/tsconfig.cloudflare.json
+++ b/tsconfig.cloudflare.json
@@ -5,6 +5,7 @@
     "app/**/*",
     "app/**/.server/**/*",
     "app/**/.client/**/*",
+    "app/google-gsi.d.ts",
     "workers/**/*",
     "worker-configuration.d.ts"
   ],
