--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "types": [
+        "@cloudflare/workers-types/2023-07-01"
+    ]
   }
 }
