--- a/web/package.json
+++ b/web/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@sentry/react": "^7.61.0",
     "@sentry/tracing": "^7.61.0",
-    "@tanstack/react-query": "^4.32.1",
-    "@tanstack/react-query-devtools": "^4.32.1",
-    "@tanstack/react-virtual": "3.0.0-beta.54",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-feather": "^2.0.9",
-    "react-router-dom": "^6.14.2",
+    "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query-devtools": "^5.84.2",
+    "@tanstack/react-virtual": "3.13.12",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^7.8.0",
     "zustand": "^4.4.0"
   },
   "scripts": {
@@ -28,15 +28,15 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/node": "^20.4.6",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-router-dom": "^5.1.7",
-    "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.14",
-    "cross-env": "^7.0.3",
-    "postcss": "^8.4.31",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "cross-env": "^10.0.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.8"
+    "vite": "^7.1.1"
   }
 }
