--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "pnpm run -r dev",
-    "lint": "pnpm run -r lint"
+    "lint": "pnpm run -r lint",
+    "build": "cd web && pnpm build && cd ../api && pnpm deploy",
+    "build:web": "cd web && pnpm build",
+    "build:api": "cd api && pnpm deploy",
+    "dev:unified": "pnpm build:web && cd api && pnpm dev"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.2.1",
