--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiggles-pages",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,15 +28,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "4.1.11",
     "vite": "^7.1.1"
   }
 }
