Move to google sign in from cloudflare access
Also this adds some tests for future harness engineering.

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,11 +1,14 @@
-name: Deploy API
-on: 
-  push:
-    branches:
-      - main
-    paths:
-      - 'api/**'
-  workflow_dispatch:
+# Temporarily disabled while updating technologies in the stack
+# name: Deploy API
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'api/**'
+#   workflow_dispatch:
+name: Deploy API (disabled)
+on: workflow_dispatch
 
 jobs:
   publish:
