--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,12 +1,15 @@
-name: Deploy Web
-on: 
-  push:
-    branches:
-      - main
-    paths:
-      - 'web/**'
-      - '.github/workflows/deploy-web.yml'
-  workflow_dispatch:
+# Temporarily disabled while updating technologies in the stack
+# name: Deploy Web
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'web/**'
+#       - '.github/workflows/deploy-web.yml'
+#   workflow_dispatch:
+name: Deploy Web (disabled)
+on: workflow_dispatch
 
 jobs:
   publish:
