--- a/web/.env.local
+++ b/web/.env.local
@@ -1,3 +1,3 @@
 NODE_ENV=production
-VITE_API_URL="https://dev.wiggle-room.xyz/api"
+VITE_API_URL="http://localhost:8787/api"
 VITE_GOOGLE_CLIENT_ID="153513713709-ci5ajsramjotbt7apiuvambqan36n6m2.apps.googleusercontent.com"
