--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,10 @@
     "build": "vite build --mode production",
     "preview": "rm -rf dist && pnpm build --mode staging && pnpm vite preview --port 5173",
     "lint": "eslint ./src --fix",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:update": "vitest run -u"
   },
   "browserslist": [
     ">0.2%",
@@ -33,10 +36,13 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/browser-playwright": "^4.0.18",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.8"
+    "vite": "^4.4.8",
+    "vitest": "^4.0.18",
+    "vitest-browser-react": "^2.0.5"
   }
 }
